--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(SkyrimSplitScreen LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Widgets Core Gui)
 
-add_executable(${PROJECT_NAME}
+set(CMAKE_AUTOMOC ON)
+
+set(SRC_FILES
     src/main.cpp
     src/Launcher.cpp
     src/Config.cpp
@@ -15,6 +17,8 @@ add_executable(${PROJECT_NAME}
     src/UI/MainWindow.cpp
 )
 
+add_executable(${PROJECT_NAME} ${SRC_FILES})
+
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
